styles/main.css
.container {
  background-color: rgb(24, 152, 152);
  max-width: 100vw;
  margin: 0rem 4rem;
  position: relative;
  box-sizing: border-box;
}

.footer {
  font-family: 'Special Elite', monospace;
  width: 100%;
  text-align: center;
  position: absolute;
  bottom: -6.5rem;
}

h1 {
  font-size: 3rem;
  font-family: 'Special Elite', system-ui;
  text-align: center;
}

.flexColumn {
  display: flex;
  flex-direction: row;
  min-height: 75vh;
  justify-content: space-between;
}

nav {
  background-color: rgb(178, 230, 230);
  min-width: fit-content;
  max-height: fit-content;
  padding: 30px 50px;
  padding-left: 50px;
  border-radius: 5%;
}

h2 {
  font-family: 'Special Elite', system-ui;
}

.blogNavTitle {
  font-family: 'Changa', sans-serif;
}

.navList {
  list-style: none;
  padding: 0px;
  font-family: 'Changa', sans-serif;
}

.mainText {
  padding-top: 0px;
  padding-left: 30px;
}

.paragraphHeader {
  font-family: 'Russo One', sans-serif;
  font-weight: 100;
}

p {
  font-family: 'Changa', sans-serif;
  line-height: 120%;
}

.homeLink {
  text-decoration: none;
  color: black;
}

.imgColumn {
  float: left;
  width: 33.33%;
  padding: 5px;
  display: table;
}

#mindBlown {
  margin-top: 6.7rem;
}

.blogTitle {
  font-family: 'Russo One', sans-serif;
  font-weight: 100;
  font-size: 2rem;
  padding-top: 2rem;
  margin: 1px;
}

.blogSubtitle {
  font-family: 'Changa', sans-serif;
  margin-top: 0.5rem;
  font-weight: 600;
}

.blogIntro {
  margin-top: 2rem;
  margin-bottom: 3rem;
}

.technicalSubHeading {
  font-family: 'Changa', sans-serif;
  font-weight: 500;
  font-size: 1.5rem;
}

.blogTechText {
  margin: 0rem 2rem;
  max-height: fit-content;
}

.positionsImg {
  max-height: fit-content;
  margin-top: 2rem;
}

.listTitle {
  font-family: 'Changa', sans-serif;
  font-weight: 600;
  font-size: 1.2rem;
}

.blogList {
  list-style: none;
  padding: 0px;
  font-family: 'Changa', sans-serif;
  margin-right: 2rem;
}

.blogFooter {
  text-align: center;
  padding-top: 3rem;
  padding-bottom: 1rem;
}

@media only screen and (max-width: 750px) {
  .flexColumn {
    flex-wrap: wrap;
  }

  .mainText {
    padding-right: 2.5rem;
  }

  #codeImg {
    width: 280%;
    height: auto;
  }

  #mindBlown {
    margin-top: 0px;
  }
}

